# fastapi-react-production-stack

./: .gitignore  README.md  nginx.conf
backend/: .env  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ae63493d914_changed_name_column_in_to_string_auth_.py  77c42c771a98_removed_the_hashed_password_column_from_.py  7eeb7179c607_added_2_column_in_purchases_table.py  8e3d6aba36c8_added_purchase_table.py  93ead5443133_added_purchase_table1.py  bda320449a4b_rename_the_password_to_hased_password.py  d6d3dff15636_add_name_in_auth_users_table.py
backend/app/: main.py
backend/app/api/v1/endpoints/: auth_route.py
backend/app/api/v1/endpoints/items/: item_route.py
backend/app/api/v1/endpoints/purchase/: purchase_route.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/db/models/: item_model.py  purchase_model.py  user.py
backend/app/schemas/: user_schema.py
backend/app/services/: auth_service.py
backend/app/services/items/: item_services.py
backend/app/services/purchase/: purchase_service.py
frontend/reac-app/: .gitignore  index.html  package-lock.json  package.json
frontend/reac-app/src/: App.jsx
frontend/reac-app/src/components/: Layout.jsx  Navbar.jsx  Sidebar.jsx
frontend/reac-app/src/config/: api.js  axios.js
frontend/reac-app/src/pages/: Home.jsx  Login.jsx  Register.jsx
frontend/reac-app/src/pages/purchase/: PurchaseDetails.jsx
frontend/reac-app/src/services/: authRegister.js  authService.js  itemService.js  logoutService.js
(+1 files in other folders)
